--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 services:
   kong-migrations:
     image: "kong:latest"
-    command: kong migrations up
+    command: kong migrations bootstrap up
     depends_on:
       db:
         condition: service_healthy
