changed image from "kong:latest" to "kong:0.14.1"
Should eliminate any issues related to kong version changes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.1'
 services:
   kong-migrations:
-    image: "kong:latest"
+    image: "kong:0.14.1"
     command: kong migrations up
     depends_on:
       db:
@@ -15,7 +15,7 @@ services:
     links:
       - db:db
   kong:
-    image: "kong:latest"
+    image: "kong:0.14.1"
     depends_on:
       db:
         condition: service_healthy
