--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2.1'
 services:
   kong-migrations:
-    image: "kong:0.14.1"
-    command: kong migrations up
+    image: "kong:1.0.3"
+    command: kong migrations bootstrap up
     depends_on:
       db:
         condition: service_healthy
@@ -15,7 +15,7 @@ services:
     links:
       - db:db
   kong:
-    image: "kong:0.14.1"
+    image: "kong:1.0.3"
     volumes:
       - ./kong/plugins/health-apis-static-token-handler:/usr/local/share/lua/5.1/kong/plugins/health-apis-static-token-handler
       - ./kong/plugins/health-apis-token-validator:/usr/local/share/lua/5.1/kong/plugins/health-apis-token-validator
